<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/gradient_8">

    <FrameLayout
        android:id="@+id/frameCalc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="69dp"
                android:text="@string/seleccione_alim"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnCalcPerros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/White"
                    android:drawableTop="@drawable/perro"
                    android:padding="10sp"
                    android:text="@string/perros" />

                <Button
                    android:id="@+id/btnCalcGatos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:background="@color/White"
                    android:drawableTop="@drawable/gato"
                    android:padding="10dp"
                    android:text="@string/gatos" />


            </LinearLayout>


            <Button
                android:text="@string/volver"
                android:id="@+id/btnVolverH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="163dp" />


        </RelativeLayout>

    </FrameLayout>


</RelativeLayout>