<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_3"
    tools:context=".Fragments.EnfermedadesFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:text="@string/enfermedades_titulo"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="@dimen/text_size_lg"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:text="@string/aviso_enfermedades"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="@dimen/text_size_sm"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:text="@string/aviso_enfermedades2"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="@dimen/text_size_sm"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/enfermedadesRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>