<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CreditosFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_nombre"
                    android:textAlignment="center"
                    android:textColor="@color/White"
                    android:textSize="@dimen/text_size_lg"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/descripcion_mascotapp1"
                    android:textAlignment="center"
                    android:textColor="@color/White"
                    android:textSize="@dimen/text_size_md" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/descripcion_mascotapp2"
                    android:textAlignment="center"
                    android:textColor="@color/White"
                    android:textSize="@dimen/text_size_md" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/creditosRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </android.support.v7.widget.RecyclerView>



            <!--<android.support.v7.widget.CardView-->
                <!--android:id="@+id/credits_cardView"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="@dimen/margin_medium"-->
                <!--app:cardCornerRadius="10sp">-->

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="horizontal">-->

                    <!--<ImageView-->
                        <!--android:id="@+id/imgPersona"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content" />-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_margin="@dimen/margin_small"-->
                        <!--android:orientation="vertical">-->

                        <!--<TextView-->
                            <!--android:id="@+id/nombreApellido"-->
                            <!--android:text="Nombre Apellido"-->
                            <!--android:textStyle="bold"-->
                            <!--android:textColor="@color/Black"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content" />-->

                        <!--<TextView-->
                            <!--android:id="@+id/ocupacion"-->
                            <!--android:text="Programador"-->
                            <!--android:textColor="@color/Black"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content" />-->

                        <!--<TextView-->
                            <!--android:id="@+id/socialLink"-->
                            <!--android:text="linkedin.com/in/facundoalvarado9"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content" />-->

                    <!--</LinearLayout>-->

                <!--</LinearLayout>-->

            <!--</android.support.v7.widget.CardView>-->


        </LinearLayout>
    </ScrollView>
</RelativeLayout>